<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_start">
    <fragment
        android:id="@+id/nav_start"
        android:name="com.example.myapplication.ui.start.StartFragment"
        android:label="Login"
        tools:layout="@layout/start_page" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar_events"
        android:name="com.example.myapplication.ui.home.CalendarFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_calendar">
        <argument
            android:name="calendarMode"
            android:defaultValue="EVENTS"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_calendar_food"
        android:name="com.example.myapplication.ui.home.CalendarFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_calendar">
        <argument
            android:name="calendarMode"
            android:defaultValue="FOOD"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_calendar_all"
        android:name="com.example.myapplication.ui.home.CalendarFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_calendar">
        <argument
            android:name="calendarMode"
            android:defaultValue="ALL"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
